# rust_pokedex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  sqlite.db
src/: main.rs
src/core/domain/: mod.rs
src/handlers/: get.rs  mod.rs
src/infra/: database.rs
src/infra/database/: mod.rs
src/infra/http/handlers/: get.rs
src/infra/http/routes/: mod.rs
src/infra/http/server/: mod.rs
src/router/: mod.rs
